# battle_game

./: .gitignore  Dockerfile  README.md  RUNNING.md  docker-compose.yml  pyproject.toml
client/: client.py  local_db.py
dashboard/: Dockerfile  package.json  server.js
dashboard/public/: index.html  render.js
docs/: structure.md
docs/prompts/: prompt_1.md  prompt_3.md
docs/simulations/: alpha.py
prompts/: prompt_2.md
server/: database.py  engine.py  main.py  parameters.json  players.json
server/configs/: m_debug_01.json  p_blue.json  p_red.json
shared/: combat.py  schemas.py  unique_ids.py
src/battle_game/: __init__.py
src/battle_game/client/: client.py
src/battle_game/server/: engine.py  main.py  models.py
src/battle_game/shared/: hex_math.py  schemas.py
