[project]
name = "battle-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DanielBerns", email = "daniel.w.berns@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
battle-game = "battle_game:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
