[project]
name = "battle-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DanielBerns", email = "daniel.w.berns@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.13",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[project.scripts]
battle-game = "battle_game:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
