[project]
name = "battle-game-v2"
version = "2.0.0"
description = "Deterministic Hex Strategy Game"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg[binary]", # Standard postgres driver
    "pydantic",
    "httpx",
    "bcrypt",
    "pyjwt"
]

[tool.uv]
# This allows you to treat the current directory as a package source
# ensuring 'import shared' works if PYTHONPATH is set correctly.
